--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,23 @@
 services:
-   database:
-      image: "postgres:15-alpine"
+   app:
+      image: 'docker-spring-boot-postgres:latest'
+      build:
+         context: .
+      container_name: app
+      depends_on:
+         - db
+      environment:
+         - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/ms_user
+         - SPRING_DATASOURCE_USERNAME=postgres
+         - SPRING_DATASOURCE_PASSWORD=postgres
+         - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      ports:
+         - 8080:8080
+
+   db:
+      image: 'postgres:15-alpine'
+      container_name: db
       environment:
          - POSTGRES_USER=postgres
          - POSTGRES_PASSWORD=postgres
          - POSTGRES_DB=ms_user
-         - PGDATA=/var/lib/postgresql/data/pgdata
-      ports:
-         - 8000:5432
-   web:
-      build: .
-      ports:
-         - 8080:8080
