--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,4 +15,14 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
+  rabbitmq:
+    host: 35.199.70.141
+    port: 5672
+    username: admin
+    password: password@vascobank123
+  application:
+    name: user-management
 
+client:
+  log:
+    queue: vascobank.logs
