--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,9 @@ services:
          - POSTGRES_USER=postgres
          - POSTGRES_PASSWORD=postgres
          - POSTGRES_DB=ms_user
+
+   rabbitmq:
+      image: rabbitmq:management
+      ports:
+         - "5672:5672"
+         - "15672:15672"
