config: conexao com ip do Rabbit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
          - SPRING_JPA_HIBERNATE_DDL_AUTO=update
       ports:
          - 8080:8080
+#      networks:
+#         - network
 
    db:
       image: 'postgres:15-alpine'
@@ -21,9 +23,10 @@ services:
          - POSTGRES_USER=postgres
          - POSTGRES_PASSWORD=postgres
          - POSTGRES_DB=ms_user
+#      networks:
+#         - network
 
-#   rabbitmq:
-#      image: rabbitmq:management
-#      ports:
-#         - "5672:5672"
-#         - "15672:15672"
+#networks:
+#   network:
+#      external: true
+#      name: rabbitmq_network
